--- a/lab02/brookealtman-bio.html
+++ b/lab02/brookealtman-bio.html
@@ -14,6 +14,8 @@
     <p>
         My name is Brooke Altman, I am an <strong>Innovation, Society, and Technology</strong> major with a concentration in project management and a minor in marketing. I am interested in learning more about how technolgoy shapes buisnesses worldwide, and how artifical intelligence is continuing to impact our society in both positive and negative ways.
     </p>
+        I am proud to say that I started my journey in Marketing and social media this past summer and have continued to take my studies very seriously, engaging with Syracuse University.
+    <p> 
     <p> 
      </body>
 
