--- a/lab02/brookealtman-bio.html
+++ b/lab02/brookealtman-bio.html
@@ -16,6 +16,8 @@
     </p>
         I am proud to say that I started my journey in Marketing and social media this past summer and have continued to take my studies very seriously, engaging with Syracuse University.
     <p> 
+        I love to hang out with my friends and family and watch TV and movies nightly! My favorite food is sushi, and I have a golden retriever dog named George who is my best friend! I am extremely excited to finish out my next two years of college at Syracuse and cannot wait for what's to come in the future!
+    <p> 
      </body>
 
 </html>
