--- a/lab02/brookealtman-bio.html
+++ b/lab02/brookealtman-bio.html
@@ -21,6 +21,7 @@
         I love to hang out with my friends and family and watch TV and movies nightly! My favorite food is sushi, and I have a golden retriever dog named George who is my best friend! I am extremely excited to finish out my next two years of college at Syracuse and cannot wait for what's to come in the future!
     <p> 
     <hr>
+    &copy;
     </body>
 
 </html>
