--- a/lab02/brookealtman-bio.html
+++ b/lab02/brookealtman-bio.html
@@ -22,6 +22,11 @@
     <p> 
     <hr>
     &copy; 2025
+    <ul> Hobbies
+        <li>Hanging out with friends and family</li>
+        <li>PLaying pickleball</li>
+        <li>Watching movies</li>
+</ul>
     </body>
 
 </html>
