--- a/lab02/brookealtman-bio.html
+++ b/lab02/brookealtman-bio.html
@@ -22,7 +22,7 @@
     <p> 
     <hr>
     &copy; 2025
-    <ul> Hobbies
+    <ul>Hobbies:
         <li>Hanging out with friends and family</li>
         <li>PLaying pickleball</li>
         <li>Watching movies</li>
