--- a/lab02/brookealtman-bio.html
+++ b/lab02/brookealtman-bio.html
@@ -24,7 +24,7 @@
     &copy; 2025
     <ul>Hobbies:
         <li>Hanging out with friends and family</li>
-        <li>PLaying pickleball</li>
+        <li>Playing pickleball</li>
         <li>Watching movies</li>
 </ul>
     </body>
