--- a/lab01/brookealtman-bio.html
+++ b/lab01/brookealtman-bio.html
@@ -3,7 +3,7 @@
 <html lang="en">
 
     <head>
-        <metal charset="utf-8">
+        <meta charset="utf-8">
         <title>Title here</title>
     </head>
 
