--- a/lab05/brookealtman-bio.html
+++ b/lab05/brookealtman-bio.html
@@ -7,6 +7,9 @@
     </head>
 
     <body>
+
+        <img src="../images/BrookeAltman-image.png" alt="Brooke Altman Image">
+
         <h1>Brooke Altman's Biography</h1>
 
         <h2>Personal Info</h2>
